--- a/package.json
+++ b/package.json
@@ -9,18 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^2.3.4",
+    "axios": "^1.7.7",
+    "googleapis": "^144.0.0",
+    "next": "14.2.13",
+    "puppeteer": "^23.4.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.13"
+    "react-icons": "^5.3.0",
+    "react-multi-carousel": "^2.8.5"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.13"
+    "typescript": "^5"
   }
 }
